# brainfuck-react

./: package-lock.json
react-client/: package-lock.json  package.json
react-client/src/: App.css  App.tsx
react-client/src/Components/: Code.tsx  Info.tsx  InterpretButton.tsx  Memory.tsx  Output.tsx
react-client/src/Redux/: ActionCreators.ts  Actions.ts  CodeReducer.ts  CombineReducers.ts  Store.ts
rust/brainfuck/: Cargo.toml
rust/brainfuck/src/: interpreter.rs  main.rs
rust/brainfuck/src/interpreter/: memctrl.rs
