[package]
name = "brainfuck"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/main.rs"


[dependencies]
serde = { version = "1.0.135", features = ["derive"] }
wasm-bindgen = { version = "0.2.34", features = ["serde-serialize"] }